infra/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rakuten
  labels:
    name: rakuten
    cycle: c13.5
